--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="estilo.css">
+	<title>Recomendação de pcs</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<section id="comeco">
@@ -13,13 +13,13 @@
 				<li><a class="a" href="#Basicos">Básicos</a></li>
 				<li><a class="a" href="#Intermediarios">Intermediários</a></li>
 				<li><a class="a" href="#ComputadoresGamer">Computadores Gamer</a></li>
+                <li><a class="a" href="#outrossites">Nossos outros sites</a></li>
 			</ul>
 		</nav>
 
 		<header><img src="img/banner.avif"><img class="logo" src="img/logo3.png"></header>
 
-		<nav></nav>
-		
+		<div class="lado"></div>
 		<main>
 			<section>
 				<h2>Introdução</h2>
@@ -106,11 +106,17 @@
 					</div>
 					</div>
 				</div>
+                <section id="outrossites">
+                    <h3>Nossos outros sites</h3>
+                    <ul id="extra">
+                        <li><a href="pg1.html" class="linkopage">Computadores da década de 40 à 2000</a></li>
+                        <li><a href="pg2.html" class="linkopage">Computadores de 2000 até hoje</a></li>
+                    </ul>
 			</section>
 		</main>
 
-		<aside></aside>
-
+		<div class="lado"></div>
+        
 		<footer>
 			<p>Desenvolvido por Carlos e Luiz Fernando - 2023</p>
 		</footer>
