--- a/pg1.html
+++ b/pg1.html
@@ -19,7 +19,7 @@
             <li><a class="a" href="pg2.html">Década de 2000 até hoje</a></li>
         </ul>
     </nav>
-    <div class="lado"></div>
+    <div class="ladopg1"></div>
     <Main>
         <section>
             <h2>Uma Jornada Através das Décadas: Uma Análise do Mundo da Tecnologia e dos Computadores</h2>
@@ -102,6 +102,9 @@
             </p>
         </section>
     </Main>
-    <div class="lado"></div>
+    <div class="ladopg1"></div>
+    <footer>
+        <p>Desenvolvido por Carlos e Luiz Fernando - 2023</p>
+    </footer>
 </body>
 </html>
