--- a/pg2.html
+++ b/pg2.html
@@ -17,8 +17,8 @@
             <li><a href="pg1.html" class="a">Década de 40 até 90</a></li>
         </ul>
     </nav>
-    <div class="lado"></div>
-    <main>
+    <div class="ladopg2"></div>
+    <main id="pg2">
         <section>
             <h2>Uma Jornada Através das Décadas: Uma Análise do Mundo da Tecnologia e dos Computadores</h2>
         </section>
@@ -59,6 +59,9 @@
             </p>
         </section>
     </main>
-    <div class="lado"></div>
+    <div class="ladopg2"></div>
+    <footer>
+        <p>Desenvolvido por Carlos e Luiz Fernando - 2023</p>
+    </footer>
 </body>
 </html>
